models.BleachField's form field set to forms.BleachField (#19)
* models.BleachField's form field set to forms.BleachField

* BleachField form field label implemented

models.BleachField form field label set to field's verbose_name

* CustomBleachWidget customized and set in settings.py as bleach default widget

* testproject person model, person form and model_form view created

* test_default_widget BLEACH_DEFAULT_WIDGET setting overridden to ensure being independent of settings

* ModelFormField tests added

* forms.py flake8 errors fixed

* testproject views.py request.path removed for redirect to fix CodeQl failur check

* formfield test added with specified choices and test_same_allowed_args improved

--- a/testproject/templates/home.html
+++ b/testproject/templates/home.html
@@ -1,4 +1,5 @@
 <body>
+    <h2>Form example</h2>
     <form action="." method="post">
         {% csrf_token %}
 
@@ -9,4 +10,5 @@
             <input type="submit" value="Submit" />
         </div>
     </form>
+    <a href="{% url 'model_form' %}">Model form example(Note: you need to migrate database to use it)</a>
 </body>
